API: enh - Go gRPC response status
