# apps/post/internal/posts/application/query/getPopularPosts/v1/dto/getPopularPosts.req.dto.go
@@ -11,8 +11,10 @@ type GetPopularPostsQueryReq struct {
 
 func (g GetPopularPostsQueryReq) MapToQuery() repository.PostQuery {
 	trueValue := true
+	likesValue := "likes"
+	descValue := "desc"
 	g.Published = &trueValue
-	g.SortBy = "likes"
-	g.SortOrder = "desc"
+	g.SortBy = &likesValue
+	g.SortOrder = &descValue
 	return g.PostListQueryDto.MapToQuery()
 }
